k8s/helloWorld.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  namespace: tfe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: helloworld
          image: ghcr.io/chiband/helloworld-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
