k8s/helloWorldApp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-app
  namespace: tfe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-app
  template:
    metadata:
      labels:
        app: helloworld-app
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: helloworld-app
          image: ghcr.io/chiband/helloworldapp-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
