k8s/helloWorldService.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: tfe
spec:
  type: NodePort
  selector:
    app: helloworld
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
