k8s/keycloakLocal.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: tfe
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
