k8s/ingress-helloworld.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: tfe
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: api.local
      http:
        paths:
          - path: /helloworld(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: helloworld-app-service
                port:
                  number: 8080
